force-app/main/default/objects/Student__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <label>Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1A</fullName>
            </value>
            <value>
                <fullName>1B</fullName>
            </value>
            <value>
                <fullName>2A</fullName>
            </value>
            <value>
                <fullName>2B</fullName>
            </value>
            <value>
                <fullName>3A</fullName>
            </value>
            <value>
                <fullName>3B</fullName>
            </value>
            <value>
                <fullName>4A</fullName>
            </value>
            <value>
                <fullName>4B</fullName>
            </value>
            <value>
                <fullName>5A</fullName>
            </value>
            <value>
                <fullName>5B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>