force-app/main/default/objects/Student__c/fields/tel__c.field-meta.xml
<CustomField>
    <fullName>tel__c</fullName>
    <formula>Parent__r.Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>tel</label>
    <type>Text</type>
</CustomField>